# Flutter-Rust-app

./: README.md
app/android/app/src/main/kotlin/com/example/app/: Cryptor.kt  MainActivity.kt
app/lib/: main.dart  platform_utils.dart  platform_utils_non_web.dart  platform_utils_web.dart
app/web/: encryption.js  index.html
rust-library/: .gitignore  Cargo.toml
rust-library/cryptor/: Cargo.toml
rust-library/cryptor/src/: lib.rs
rust-library/cryptor_c/: Cargo.toml
rust-library/cryptor_global/: Cargo.toml
rust-library/cryptor_jni/: Cargo.toml  build.rs
rust-library/cryptor_jni/src/: lib.rs
rust-library/cryptor_wasm/: Cargo.toml
rust-library/cryptor_wasm/src/: lib.rs
