[package]
name = "cryptor"
version = "0.1.0"
authors = ["shamma"]
edition = "2021"

# See more keys and their definitions at 
# https://doc.rust-lang.org/cargo/reference/manifest.html

# Static Library. 
# See: https://doc.rust-lang.org/reference/linkage.html
# See: https://doc.rust-lang.org/cargo/reference/cargo-targets.html
[lib]
crate-type = ["cdylib","rlib"]

[dependencies]
aes = "0.7.5" 
hex="0.4.3"
block-modes="0.8.1"
hex-literal="0.3.3"
block-padding = "0.2"
aes-gcm="0.9"
wasm-bindgen = "0.2.88"

